AFS_Dev/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Areas_of_Interest__c</fullName>
        <inlineHelpText>Only CALs should update this field.</inlineHelpText>
        <label>Areas of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition Reform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Data/Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Services/E2E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO/Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workforce</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <inlineHelpText>The specific group within an organization to which the contact belongs to.</inlineHelpText>
        <label>Component</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Communications__c</fullName>
        <inlineHelpText>Select one or multiple items from the picklist.</inlineHelpText>
        <label>Contact Communications</label>
        <picklist>
            <picklistValues>
                <fullName>Client Satisfaction Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Card</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeneralBuyerValues__c</fullName>
        <label>General Buyer Values</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_AFS_Relationship__c</fullName>
        <inlineHelpText>Select the level of overall AFS relationship with this contact.</inlineHelpText>
        <label>Level of AFS Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>+3: Strong Personal and Business Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+2: Good Business Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1: Mildly Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0: Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1: Mildly Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2: Non-Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-3: Strongly Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>?: Unknown Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Communications__c</fullName>
        <inlineHelpText>Only CALs should update this field.</inlineHelpText>
        <label>Marketing Communications</label>
        <picklist>
            <picklistValues>
                <fullName>iCCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue-based Marketing Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Use this field to document any additional information about this contact. Notes should be related to business interactions and avoid Personal Identifiable Information (PII). Start with the date and your name so others can follow the sequence of entries.</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Style__c</fullName>
        <label>Social Style</label>
        <picklist>
            <picklistValues>
                <fullName>Amiable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expressive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Component__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Component__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Component__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>Contacts I Own</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Component__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Account_Cannot_Be_Intel</fullName>
        <active>true</active>
        <description>Contacts cannot be linked to Intel accounts.</description>
        <errorConditionFormula>OR
((AND (TEXT(Account.Type) = &apos;Sub Portfolio&apos;, Account.Name=  &apos;Intel&apos;)),
Account.Sub_Portfolio__c = &apos;Intel&apos;)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>CON-001: Intel Contacts should not be listed in SMaRT. Please select a non-Intel account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Assistant_Phone</fullName>
        <active>true</active>
        <description>This validation accepts number only else it will throw error</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(AssistantPhone )),
NOT(REGEX(AssistantPhone ,&quot;[0-9()+ -]+&quot;))
)</errorConditionFormula>
        <errorDisplayField>AssistantPhone</errorDisplayField>
        <errorMessage>CON-002-005 Please enter a valid phone number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Fax_Number</fullName>
        <active>true</active>
        <description>User cannot input a letter to this field</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Fax )),
NOT(REGEX(Fax ,&quot;[0-9()+ -]+&quot;))
)</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>CON-002-004 Please enter a valid phone number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Mobile_Phone</fullName>
        <active>true</active>
        <description>User cannot input a letter to this field</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(MobilePhone)),
NOT(REGEX(MobilePhone,&quot;[0-9()+ -]+&quot;))
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>CON-002-002 Please enter a valid phone number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Other_Phone</fullName>
        <active>true</active>
        <description>User cannot input a letter in this field</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(OtherPhone )),
NOT(REGEX(OtherPhone ,&quot;[0-9()+ -]+&quot;))
)</errorConditionFormula>
        <errorDisplayField>OtherPhone</errorDisplayField>
        <errorMessage>CON-002-003 Please enter a valid phone number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Phone</fullName>
        <active>true</active>
        <description>User cannot input a letter in this field</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Phone)),
NOT(REGEX(Phone,&quot;[0-9()+ -]+&quot;))
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>CON-002-001 Please enter a valid phone number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Phone_Numbers</fullName>
        <active>true</active>
        <description>Show error message if user inputs invalid phone numbers</description>
        <errorConditionFormula>OR(
	AND(
	NOT(ISBLANK(AssistantPhone )),
	NOT(REGEX(AssistantPhone ,&quot;[0-9()+ -]+&quot;))
	),
	AND(
	NOT(ISBLANK(Fax )),
	NOT(REGEX(Fax ,&quot;[0-9()+ -]+&quot;))
	),
	AND(
	NOT(ISBLANK(MobilePhone)),
	NOT(REGEX(MobilePhone,&quot;[0-9()+ -]+&quot;))
	),
	AND(
	NOT(ISBLANK(OtherPhone )),
	NOT(REGEX(OtherPhone ,&quot;[0-9()+ -]+&quot;))
	),
	AND(
	NOT(ISBLANK(Phone)),
	NOT(REGEX(Phone,&quot;[0-9()+ -]+&quot;))
	)
)</errorConditionFormula>
        <errorMessage>CON-002: Please enter a valid phone number.</errorMessage>
    </validationRules>
</CustomObject>